--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "private": true,
   "description": "A Strapi application",
   "scripts": {
-    "build": "audelweiss/node_modules/.bin/strapi build",
-    "console": "audelweiss/node_modules/.bin/strapi console",
-    "deploy": "audelweiss/node_modules/.bin/strapi deploy",
-    "dev": "audelweiss/node_modules/.bin/strapi develop",
-    "develop": "audelweiss/node_modules/.bin/strapi develop",
+    "build": "strapi build",
+    "console": "strapi console",
+    "deploy": "strapi deploy",
+    "dev": "strapi develop",
+    "develop": "strapi develop",
     "seed:example": "node scripts/seed.js",
-    "start": "audelweiss/node_modules/.bin/strapi start",
-    "strapi": "audelweiss/node_modules/.bin/strapi",
+    "start": "strapi start",
+    "strapi": "strapi",
     "upgrade": "npx @strapi/upgrade latest",
     "upgrade:dry": "npx @strapi/upgrade latest --dry"
   },
