--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -80,7 +80,7 @@ $RECYCLE.BIN/
 ssl
 .idea
 nbproject
-public/uploads/.gitkeep
+public/uploads/*
 !public/uploads/.gitkeep
 .tsbuildinfo
 .eslintcache
