--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
+    "phosphor-react": "^1.4.1",
     "qs": "^6.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
