--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "phosphor-react": "^1.4.1",
     "qs": "^6.14.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "swiper": "^11.2.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
