--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,15 +11,19 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "js-cookie": "^3.0.5",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "phosphor-react": "^1.4.1",
     "qs": "^6.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-multi-carousel": "^2.8.6",
+    "react-slick": "^0.30.3",
     "remark-gfm": "^4.0.1",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.2.6"
   },
   "devDependencies": {
