--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "@strapi/plugin-cloud": "5.12.1",
     "@strapi/plugin-users-permissions": "5.12.1",
     "@strapi/provider-email-nodemailer": "^5.16.0",
+    "@strapi/provider-email-sendgrid": "^5.16.0",
     "@strapi/strapi": "5.12.1",
     "fs-extra": "^10.0.0",
     "mime-types": "^2.1.27",
