--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.1",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "phosphor-react": "^1.4.1",
